############################################################################
# Copyright (c) 2009-2019 Brian Waters
# Copyright (c) 2019 Sprint
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
############################################################################

# These files will end up in the install include directory
# For example, /usr/include
nobase_include_HEADERS =   \
   epc/dnscache.h          \
   epc/dnsparser.h         \
   epc/dnsquery.h          \
   epc/dnsrecord.h         \
   epc/eatomic.h           \
   epc/ebase.h             \
   epc/ebzip2.h            \
   epc/ecbuf.h             \
   epc/emgmt.h             \
   epc/edir.h              \
   epc/eerror.h            \
   epc/efd.h               \
   epc/efdjson.h           \
   epc/efqdn.h             \
   epc/egetopt.h           \
   epc/ehash.h             \
   epc/einternal.h         \
   epc/eip.h               \
   epc/ejsonbuilder.h      \
   epc/elogger.h           \
   epc/ememory.h           \
   epc/emsg.h              \
   epc/eostring.h          \
   epc/epath.h             \
   epc/epcdns.h            \
   epc/epctools.h          \
   epc/epfcp.h             \
   epc/eqbase.h            \
   epc/eqpriv.h            \
   epc/eqpub.h             \
   epc/eshmem.h            \
   epc/esocket.h           \
   epc/estatic.h           \
   epc/estats.h            \
   epc/estring.h           \
   epc/esynch.h            \
   epc/esynch2.h           \
   epc/etbasic.h           \
   epc/eteid.h             \
   epc/etevent.h           \
   epc/etime.h             \
   epc/etimer.h            \
   epc/etimerpool.h        \
   epc/etypes.h            \
   epc/eutil.h
